--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		    </ul>
 		</div>
 		</div>
-		<div class="site-search ">
+		<div class="site-search search-show">
 		<div class="search-box module-content">
 			<form class="site-search-form" action>
 				<input class="site-search-input" type="text" placeholder="请输入关键字">
